create proper long